# OpenGL_Starter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: APP_settings.hpp  tgaimage.hpp
output/: framebuffer_360761497.tga
settings/include/: Point.hpp
settings/src/: Point.cpp
src/: APP_settings.cpp  main.cpp  tgaimage.cpp
viewport/include/: Rasterizer.hpp
viewport/src/: Rasterizer.cpp
